Crash when undoing until no point in grease pencil poly mode #31427

Closed
opened 2012-05-12 16:37:59 +02:00 by Dany Lebel · 3 comments
Member

%%%Steps to reproduce:

  1. From the default startup scene, activate the grease pencil in poly mode.
  2. Draw one or more points in the scene.
  3. Undo every points until there is no one.
  4. Draw a point.
  • Blender crashes when drawing after undoing every points in grease pencil poly mode.

This issue occurs with r46569 64 bits and official r45996 64 bits on Windows 7 64 bits. It also occures on Ubuntu with the official 2.63 release. This has been tested on a desktop computer with a wacom Intuos 3 and a normal usb mouse and with a touchpad on a portable computer. It occurs with all those devices.

Repro rate: 100%%%%

%%%Steps to reproduce: 1. From the default startup scene, activate the grease pencil in poly mode. 2. Draw one or more points in the scene. 3. Undo every points until there is no one. 4. Draw a point. - > Blender crashes when drawing after undoing every points in grease pencil poly mode. This issue occurs with r46569 64 bits and official r45996 64 bits on Windows 7 64 bits. It also occures on Ubuntu with the official 2.63 release. This has been tested on a desktop computer with a wacom Intuos 3 and a normal usb mouse and with a touchpad on a portable computer. It occurs with all those devices. Repro rate: 100%%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Seems to be fixed by Campbell in svn rev46586, closing.%%%

%%%Seems to be fixed by Campbell in svn rev46586, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31427
No description provided.