fix [#31427] Crash when undoing until no point in grease pencil poly mode